--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -5,3 +5,6 @@ password=Hum@nhrm123
 url=http://hrm.syntaxtechs.net/humanresources/symfony/web/index.php/auth/login
 
 browser=Chrome
+dbUrl = jdbc:mysql://3.239.253.255:3306/syntaxhrm_mysql
+dbuserName = syntax_hrm
+dbpassword = syntaxhrm123
